# igal

./: .gitignore  CMakeLists.txt  Readme.md
igal/: CMakeLists.txt  defs.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
igal/posix/: utils.cpp  utils.h
igal/win32/: resource.h  resources.rc  utils.cpp  utils.h
